; ModuleID = '/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/b53/extr_b53_mmap.c_b53_mmap_remove.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/b53/extr_b53_mmap.c_b53_mmap_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.b53_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @b53_mmap_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b53_mmap_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.b53_device*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.b53_device* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.b53_device* %5, %struct.b53_device** %3, align 8
  %6 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %7 = icmp ne %struct.b53_device* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %10 = call i32 @b53_switch_remove(%struct.b53_device* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret i32 0
}

declare dso_local %struct.b53_device* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @b53_switch_remove(%struct.b53_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
